fix: deleted overflow for body

--- a/frontend/src/styles/board.css
+++ b/frontend/src/styles/board.css
@@ -1,6 +1,5 @@
 main {
     margin-top: 20px;
-    overflow: auto;
 }
 
 .game {
